--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     text-align: center;
 }
 
-p{
+p, #navtext{
     color: crimson;
     padding-left: 100px;
     margin-top: 2px;
@@ -40,6 +40,18 @@ body{
 
 .jobbra{
     text-align: right;
+}
+
+#cimdiv1{
+    max-width: 600px;
+    background-color:blue;
+    margin-left: auto;
+    margin-right: auto;
+}
+#navdiv{
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
