--- a/style.css
+++ b/style.css
@@ -23,10 +23,12 @@
 }
 
 p, #navtext{
-    color: crimson;
+    color: rgb(214, 4, 4);
     padding-left: 100px;
     margin-top: 2px;
     padding: 6px;
+    font-size: 15pt;
+    font-weight: 500;
 }
 
 body{
@@ -43,8 +45,7 @@ body{
 }
 
 #cimdiv1{
-    max-width: 600px;
-    background-color:blue;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -53,7 +54,10 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-
+#text{
+    text-align: center;
+    background-color: rgba(84, 108, 145, 0.4);
+}
 
 
 
