--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ p, #navtext{
     padding: 6px;
     font-size: 15pt;
     font-weight: 500;
+    text-align: center;
 }
 
 body{
@@ -68,10 +69,12 @@ body{
 }
 #cim1:hover, #cim2:hover, #cim3:hover, #navtext:hover, #sillag:hover{
     color: #850505;
+    cursor: pointer;
 }
 .nav-item:hover{
     border: solid rgba(6, 96, 231, 0.8);
     background-color:rgba(6, 96, 231, 0.5);
+    cursor: pointer;
     
 }
 
@@ -90,5 +93,19 @@ body{
     background: rgba(25, 0, 255, 0.5);
 
   }
+@media(hover: hover){
+  .hide{
+    display: none;
+  border: #850505;
+  }
+  #SchoolHover:hover + .hide, #DiscordHover:hover + .hide, #GithubHover:hover + .hide, #EmailHover:hover + .hide{
+    display: block;
+  padding-bottom: 10px;
+  background-color: rgba(25, 0, 255, 0.5);
+  }
+}
 
+dt {
+    cursor: pointer;
+}
 
